[package]
name = "diesel_usage"
version = "0.1.0"
authors = ["neerajbisht1987 <bisht.neeraj@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.0" , features = ["mysql"]}
#diesel_codegen = {version="0.16.1", features = ["mysql"] }
dotenv = "0.10.1"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.80"
serde_derive  = "1.0.80"
serde_json = "1.0.32"




rocket = "0.4.0-dev"

[dependencies.rocket_contrib]
version = "0.4.0-dev"
default_features = false
features = [ "json", "serve"]

